--- a/Kian_code/Controllers/PD.ipynb
+++ b/Kian_code/Controllers/PD.ipynb
@@ -106,6 +106,7 @@
     "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas\n",
     "\n",
     "is_clockwise_des = check_clockwise(q_des)\n",
+    "\n",
     "th_des = model.encoder(q_des)\n",
     "th_d_des = (model.jacobian_enc(q_des) @ q_d_des.T).T\n",
     "\n",
@@ -142,82 +143,115 @@
     "th_d = th_d_start\n",
     "th_dd = th_dd_start\n",
     "\n",
-    "q_est = model.decoder(th_start)\n",
-    "q_d_est = (model.jacobian_dec(th_start) @ th_d_start.T).T\n",
+    "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
+    "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
+    "q_dd_est = torch.zeros((1,2))\n",
     "\n",
     "q_real = q_start\n",
     "q_d_real = q_d_start\n",
     "q_dd_real = q_dd_start\n",
     "\n",
+    "is_clockwise = check_clockwise(q_start)\n",
+    "\n",
+    "feedforward = True\n",
+    "gravity = False\n",
     "\n",
     "for t in torch.arange(0, t_end, dt):\n",
     "    print(\"Time:\", t.item().__round__(3))\n",
-    "    #th = model.encoder(q_real)\n",
-    "    #q_est = q_real.squeeze(0)\n",
     "\n",
-    "    q_est = q_est.squeeze(0)\n",
-    "    q_d_est = q_d_est.squeeze(0)\n",
-    "    \n",
+    "    if feedforward:\n",
+    "        q = model.decoder(th, is_clockwise)\n",
+    "        q_d = (model.jacobian_dec(th, is_clockwise) @ th_d.T).T\n",
+    "    else:\n",
+    "        q = q_real\n",
+    "        q_d = q_d_real\n",
     "\n",
-    "    J_h = model.jacobian_enc(q_est.unsqueeze(0))\n",
+    "        th = model.encoder(q)\n",
+    "        th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\n",
+    "    J_h = model.jacobian_enc(q)\n",
     "    J_h_trans = torch.transpose(J_h, 0, 1)\n",
     "\n",
-    "    J_h_inv = model.jacobian_dec(th)\n",
+    "    is_clockwise = check_clockwise(q)\n",
+    "    \n",
+    "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
-    "\n",
-    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q_est, q_d_est)\n",
-    "    A_q_est = dynamics.input_matrix(rp , q_est)\n",
-    "\n",
+    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q, q_d)\n",
+    "    A_q = dynamics.input_matrix(rp , q)\n",
     "\n",
     "\n",
-    "    ### Feed-forward simulation of the system, not on real dynamics\n",
-    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
+    "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
     "    \n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
-    "    u_old = 1/A_th[0,0] * (Kp_old * (th_des[0,0] - th[0,0]) + Kd_old * (th_d_des[0,0] - th_d[0,0]))\n",
-    "    u = u_old\n",
-    "    u = 0.\n",
-    "    print(\"u:\", u)\n",
-    "    print(\"u_old:\", u_old)\n",
-    "    print(\"A_th:\", A_th)\n",
+    "    \n",
+    "    if feedforward:\n",
+    "        M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "\n",
+    "        if gravity:\n",
+    "            u = u + torch.pinverse(A_th) @ G_th\n",
+    "        tau_th = A_th * u\n",
     "\n",
-    "    tau_th = A_th * u\n",
+    "        print(\"u at th:\", u)\n",
+    "\n",
+    "        if gravity:\n",
+    "            th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T - G_th)).T \n",
+    "        else:\n",
+    "            th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T)).T\n",
+    "\n",
+    "        th = th.detach().requires_grad_()\n",
+    "        th_d = th_d.detach().requires_grad_()\n",
+    "        th_dd = th_dd.detach().requires_grad_()\n",
+    "\n",
+    "        th_d = th_d + th_dd * dt\n",
+    "        th = th + th_d * dt\n",
+    "\n",
+    "        q = q.detach().requires_grad_()\n",
+    "        q_d = q_d.detach().requires_grad_()\n",
+    "        #q_dd = q_dd.detach().requires_grad_()\n",
+    "        \n",
+    "        J_h_inv_new = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
+    "\n",
+    "        q_d_old = q_d\n",
+    "        q_d = (J_h_inv_new @ th_d.T).T\n",
+    "        q_dd = (q_d - q_d_old)/dt\n",
+    "        q = model.decoder(th, is_clockwise)\n",
+    "        q = wrap_to_pi(q)\n",
+    "    \n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
-    "    q_real = q_real.squeeze(0)\n",
-    "    q_d_real = q_d_real.squeeze(0)\n",
     "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real, q_d_real)\n",
     "    A_q_real = dynamics.input_matrix(rp, q_real)\n",
     "\n",
-    "    u_q = torch.pinverse(A_q_real) @ ((Kp @ (q_des - q_est).T + Kd @ (q_d_des - q_d_est).T))\n",
-    "    #print(\"u_q:\", u_q)\n",
+    "    if gravity and not feedforward:\n",
+    "        u = u + torch.pinverse(A_q) @ G_q_real\n",
     "\n",
-    "    tau_q_real = A_q_real * u #* A_th[0,0] # This scaling should probably be different, for example by multiplying by A_th[0,0] again\n",
+    "    tau_q_real = A_q_real * u\n",
     "\n",
-    "\n",
-    "    #TODO: Figure out how to counter forces that force outside of state space. \n",
-    "    #th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ th_d.T - G_th)).T \n",
-    "    th_dd = (torch.pinverse(M_th) @ (tau_th - C_th @ (th_d.T))).T\n",
-    "    #print(\"th_dd:\", th_dd)\n",
-    "    th_d = th_d + th_dd * dt\n",
-    "    th = th + th_d * dt\n",
+    "    if gravity:\n",
+    "        q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T) - G_q_real)).T \n",
+    "    else:\n",
+    "        q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T))).T\n",
     "    \n",
-    "    q_est = model.decoder(th)\n",
-    "    q_d_est_old = q_d_est\n",
-    "    q_d_est = (J_h_inv @ th_d.T).T\n",
-    "    q_dd_est = (q_d_est - q_d_est_old)/dt\n",
-    "\n",
-    "\n",
-    "    #TODO: Figure out how to counter forces that force outside of state space. \n",
-    "    #q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real.unsqueeze(0)).T) - G_q_real)).T \n",
-    "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real.unsqueeze(0)).T))).T\n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
+    "    q_real = wrap_to_pi(q_real)\n",
     "    \n",
+    "    if feedforward:\n",
+    "        q_est = q\n",
+    "        q_d_est = q_d\n",
+    "        q_dd_est = q_dd\n",
+    "    else:\n",
+    "        th_est = model.encoder(q_real)\n",
+    "        q_est = model.decoder(th_est, is_clockwise)\n",
+    "        th_d_est = (model.jacobian_enc(q_real) @ q_d_real.T).T\n",
+    "        q_d_est = (model.jacobian_dec(th_est, clockwise=is_clockwise) @ th_d_est.T).T\n",
+    "        q_dd_est = q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Implement with Jacobian derivative\n",
+    "\n",
+    "\n",
+    "    \"\"\" Store data for plotting \"\"\"\n",
     "\n",
     "    th_series = torch.cat((th_series, th.detach()), dim=0)\n",
     "    th_d_series = torch.cat((th_d_series, th_d.detach()), dim=0)\n",
@@ -231,6 +265,7 @@
     "    q_d_est_series = torch.cat((q_d_est_series, q_d_est.detach()), dim=0)\n",
     "    q_dd_est_series = torch.cat((q_dd_est_series, q_dd_est.detach()), dim=0) \n",
     "\n",
+    "    #print(is_clockwise)\n",
     "    print(\"\")\n",
     "    #if q_est[0] != q_est[0]:\n",
     "    #    print(\"nan detected\")\n",
